fix: bug causing expanded mobile nav menu to push content down, had to change position of content offected to absolute, reposition and resize then add z-index to stack content and nav, now displauing correctly in mobile & tablet view as well as desktop.

--- a/assets/styles/nav-text.css
+++ b/assets/styles/nav-text.css
@@ -141,6 +141,7 @@ body {
     width: 100%;
     height: 48rem;
     position: fixed;
+    z-index: 1;
 }
 
 #about-us-section {
@@ -602,6 +603,7 @@ footer > div {
         float: right;
         margin-right: 0;
         display: none;
+        z-index: 50;
     }
 
     .menu a {
